2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Name 2.2 old, 2.0 ancient.

2005-04-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/documentation.html: idem.

	* site/about/index.html: use contact.ihtml

	* site/contact.ihtml: new file.

	* site/about/index.html: use <dl>

2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/faq.html (href): Fix link.  Add close tags,
	indent-region.

	* site/search-noscript.html: 
	* site/search.html: Resurrect page.

	* site/index.html: Add link.

	* site/old-news.html (href): Fix link.

2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/index.html: Fix officciallogo, use strong iso bold.

	* site/install/older-versions.html: New file.  Retrieve from
	google cache.

	* site/about/faq.html (href): Fix link to big tutorial.

	* site: More /download link fixes.

2005-04-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/howto.html: add .html to link.

	* site/switch/index.html: fix link. 


	* site/switch/advantages.html: typos.

	* site/images/baer-ledger.png: add comment

2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/browser-language.html: Fix link.

2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install: New directory (WAS: download).  Update all links.
	This enables toplevel lilypond.org transition.

	* site/about/features.html: Fix rosegarden link.  Add close tags,
	indent-region.

2005-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: Reword Windows problem a bit after
	reading a newsgroup post.

2005-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/check-translation.py: Actually add.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Indent region.  Update.  Fix Debian
	and Fedora (previously: Red Hat) build instructions.

	* site/about/thanks.html (href): 
	* site/about/screenshots.html (href): 
	* site/about/faq.html (Han-Wen): Update documentation links to v2.4.
